--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "197cf123",
+   "id": "7276fece",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! python!\n"
+      "The second Hello World!\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello! python!\")"
+    "print(\"The second Hello World!\")"
    ]
   }
  ],
