--- a/lesson2/lesson2_3.ipynb
+++ b/lesson2/lesson2_3.ipynb
@@ -31,6 +31,72 @@
     "print(3 ** 4)\n",
     "print(99 ** 99)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e6c35445",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "78 + 95 + 83 + 69 + 70\n",
+    "2+3*4\n",
+    "(2+3)*4\n",
+    "2 * (1 + 2) ** 2 - 2 ** 2 * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a547edcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '5a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 21\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;241m5\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;241m5\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m5.0\u001b[39m\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;241m5\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m5a\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '5a'"
+     ]
+    }
+   ],
+   "source": [
+    "# python的基本資料型別\n",
+    "# int\n",
+    "5\n",
+    "15\n",
+    "\n",
+    "# float\n",
+    "5.0\n",
+    "\n",
+    "# str\n",
+    "\"5\"\n",
+    "'5'\n",
+    "\n",
+    "# bool\n",
+    "True\n",
+    "False\n",
+    "\n",
+    "5 + 5\n",
+    "\n",
+    "5 + 5.0\n",
+    "\n",
+    "5 + int('5')"
+   ]
   }
  ],
  "metadata": {
