--- a/lesson2/lesson2_3.ipynb
+++ b/lesson2/lesson2_3.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "a547edcf",
    "metadata": {},
    "outputs": [
@@ -96,6 +96,29 @@
     "5 + 5.0\n",
     "\n",
     "5 + int('5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "eb60a287",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 * (1 + 2) ** 2 - 2 ** 2 * 2 #運算式(expression)\n",
+    "value = 2 * (1 + 2) ** 2 - 2 ** 2 * 2 #敘述式(statement)\n",
+    "value"
    ]
   }
  ],
