--- a/lesson2/lesson2_4.ipynb
+++ b/lesson2/lesson2_4.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "875ad556",
    "metadata": {},
    "outputs": [
@@ -87,6 +87,46 @@
     "# chinese 開平方根\n",
     "value = round(math.sqrt(chinese),ndigits=2)\n",
     "value\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e198dacd",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 練習題：計算體重指數 BMI\n",
+    "\n",
+    "BMI（Body Mass Index，身體質量指數）是評估體重是否健康的常用指標。\n",
+    "\n",
+    "**計算公式：**  \n",
+    "BMI = 體重(公斤) ÷ 身高(公尺)²\n",
+    "\n",
+    "**題目要求：**\n",
+    "1. 建立變數 `weight` 儲存體重 72 公斤\n",
+    "2. 建立變數 `height` 儲存身高 175 公分（注意：公式需要公尺，請先除以 100）\n",
+    "3. 使用 `**` 運算子計算身高的平方\n",
+    "4. 計算 BMI 值並儲存在變數 `bmi` 中\n",
+    "5. 使用 `round()` 函式將 BMI 四捨五入到小數點後 2 位\n",
+    "6. 印出結果\n",
+    "\n",
+    "**參考輸出：**  \n",
+    "`23.35`\n",
+    "\n",
+    "**提示：**\n",
+    "- 身高需轉換成公尺：`height = 175 / 100`\n",
+    "- 平方使用 `**` 運算子：`height ** 2`\n",
+    "- 四捨五入：`round(bmi, 2)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d4983e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 請在此處撰寫你的程式碼\n"
    ]
   }
  ],
