--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -79,6 +79,34 @@
     "else:\n",
     "    print(\"壯年\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "da49656d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "丁\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = 59\n",
+    "if score >= 90:\n",
+    "    print(\"優\")\n",
+    "elif score >= 80:\n",
+    "    print(\"甲\")\n",
+    "elif score >= 70:\n",
+    "    print(\"乙\")\n",
+    "elif score >= 60:\n",
+    "    print(\"丙\")\n",
+    "else:\n",
+    "    print(\"丁\")"
+   ]
   }
  ],
  "metadata": {
