--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -107,6 +107,62 @@
     "else:\n",
     "    print(\"丁\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fc6a2ae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "優\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = 95\n",
+    "if score >= 90:\n",
+    "    print(\"優\")\n",
+    "elif score< 90 and score >= 80:\n",
+    "    print(\"甲\")\n",
+    "elif score < 80 and score >= 70:\n",
+    "    print(\"乙\")\n",
+    "elif score < 70 and score >= 60:\n",
+    "    print(\"丙\")\n",
+    "else:\n",
+    "    print(\"丁\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6d733253",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "甲\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = 85\n",
+    "if score >= 90:\n",
+    "    print(\"優\")\n",
+    "elif 90 > score >= 80:\n",
+    "    print(\"甲\")\n",
+    "elif score < 80 and score >= 70:\n",
+    "    print(\"乙\")\n",
+    "elif score < 70 and score >= 60:\n",
+    "    print(\"丙\")\n",
+    "else:\n",
+    "    print(\"丁\")"
+   ]
   }
  ],
  "metadata": {
