--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -289,6 +289,34 @@
     "    total += i\n",
     "total"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "ae0010ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "這不是5\n",
+      "這不是5\n",
+      "這不是5\n",
+      "這不是5\n",
+      "這是5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "while random.randint(1,10) != 5:\n",
+    "    print(\"這不是5\")\n",
+    "\n",
+    "print(\"這是5\")\n"
+   ]
   }
  ],
  "metadata": {
