--- a/lesson3/lesson3_5.ipynb
+++ b/lesson3/lesson3_5.ipynb
@@ -104,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "crawel",
    "language": "python",
    "name": "python3"
   },
