--- a/lesson6/lesson6_1.ipynb
+++ b/lesson6/lesson6_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bd4b971c",
    "metadata": {},
    "outputs": [
@@ -15,13 +15,19 @@
     }
    ],
    "source": [
-    "print(\"Hello! World!\")"
+    "import time\n",
+    "\n",
+    "def main_sync():\n",
+    "    pass\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main_sync()\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "crawel",
    "language": "python",
    "name": "python3"
   },
@@ -35,7 +41,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
