--- a/lesson6/lesson6_1.ipynb
+++ b/lesson6/lesson6_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bd4b971c",
    "metadata": {},
    "outputs": [
@@ -10,15 +10,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! World!\n"
+      "花費的時間: 2.00 秒\n"
      ]
     }
    ],
    "source": [
-    "import time\n",
+    "import time \n",
     "\n",
     "def main_sync():\n",
-    "    pass\n",
+    "    start_time = time.time()\n",
+    "    time.sleep(2)\n",
+    "    end_time = time.time()\n",
+    "    print(f\"花費的時間: {(end_time - start_time):.2f} 秒\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main_sync()\n"
