--- a/lesson6/lesson6_1.ipynb
+++ b/lesson6/lesson6_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "bd4b971c",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "花費的時間: 2.00 秒\n"
+      "開始下載 檔案A.pdf...\n",
+      "檔案A.pdf 下載完成！\n",
+      "開始下載 檔案B.pdf...\n",
+      "檔案B.pdf 下載完成！\n",
+      "開始下載 檔案C.pdf...\n",
+      "檔案C.pdf 下載完成！\n",
+      "花費的時間: 6.01 秒\n"
      ]
     }
    ],
    "source": [
     "import time \n",
     "\n",
+    "def download_file(file_name):\n",
+    "    print(f\"開始下載 {file_name}...\")\n",
+    "    time.sleep(2)  # 模擬下載文件所需的時間\n",
+    "    print(f\"{file_name} 下載完成！\")\n",
+    "    \n",
+    "\n",
     "def main_sync():\n",
     "    start_time = time.time()\n",
-    "    time.sleep(2)\n",
+    "    download_file(\"檔案A.pdf\")\n",
+    "    download_file(\"檔案B.pdf\")\n",
+    "    download_file(\"檔案C.pdf\")\n",
     "    end_time = time.time()\n",
     "    print(f\"花費的時間: {(end_time - start_time):.2f} 秒\")\n",
     "\n",
