--- a/lesson6/lesson6_1.ipynb
+++ b/lesson6/lesson6_1.ipynb
@@ -40,6 +40,25 @@
     "if __name__ == \"__main__\":\n",
     "    main_sync()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "36ab83ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "import nest_asyncio\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "async def main_async():\n",
+    "    pass\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    asyncio.run(main_async())"
+   ]
   }
  ],
  "metadata": {
