--- a/lesson6/lesson6_1.ipynb
+++ b/lesson6/lesson6_1.ipynb
@@ -43,18 +43,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "36ab83ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "開始下載 檔案A.pdf...\n",
+      "開始下載 檔案B.pdf...\n",
+      "開始下載 檔案C.pdf...\n",
+      "檔案A.pdf 下載完成！\n",
+      "檔案B.pdf 下載完成！\n",
+      "檔案C.pdf 下載完成！\n",
+      "花費的時間: 2.00 秒\n"
+     ]
+    }
+   ],
    "source": [
     "import asyncio\n",
     "import nest_asyncio\n",
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
+    "async def download_file(file_name):\n",
+    "    print(f\"開始下載 {file_name}...\")\n",
+    "    await asyncio.sleep(2)  # 模擬下載文件所需的時間\n",
+    "    print(f\"{file_name} 下載完成！\")\n",
+    "\n",
     "async def main_async():\n",
-    "    pass\n",
+    "    start_time = time.time()\n",
+    "    await asyncio.gather(\n",
+    "        download_file(\"檔案A.pdf\"),\n",
+    "        download_file(\"檔案B.pdf\"),\n",
+    "        download_file(\"檔案C.pdf\")\n",
+    "    )\n",
+    "    end_time = time.time()\n",
+    "    print(f\"花費的時間: {(end_time - start_time):.2f} 秒\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    asyncio.run(main_async())"
