--- a/learning2/learning2_1.ipynb
+++ b/learning2/learning2_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9432b556",
    "metadata": {},
    "outputs": [
@@ -85,31 +85,22 @@
      "data": {
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">COMPLETE</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">]</span><span style=\"color: #008000; text-decoration-color: #008000\"> ● Raw HTML                                                                                             |</span>\n",
-       "<span style=\"color: #008000; text-decoration-color: #008000\">✓ | ⏱: </span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">0.</span><span style=\"color: #008000; text-decoration-color: #008000\">01s </span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">✓ | ⏱: </span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">0.</span><span style=\"color: #008000; text-decoration-color: #008000\">00s </span>\n",
        "</pre>\n"
       ],
       "text/plain": [
        "\u001b[1;32m[\u001b[0m\u001b[32mCOMPLETE\u001b[0m\u001b[1;32m]\u001b[0m\u001b[32m ● Raw HTML                                                                                             |\u001b[0m\n",
-       "\u001b[32m✓\u001b[0m\u001b[32m | ⏱: \u001b[0m\u001b[1;32m0.\u001b[0m\u001b[32m01s \u001b[0m\n"
+       "\u001b[32m✓\u001b[0m\u001b[32m | ⏱: \u001b[0m\u001b[1;32m0.\u001b[0m\u001b[32m00s \u001b[0m\n"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'json' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 43\u001b[0m\n\u001b[1;32m     39\u001b[0m     pprint(data)\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 43\u001b[0m     \u001b[43masyncio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/GitHub/2025_11_01_tvdi_python_crawel/.venv/lib/python3.10/site-packages/nest_asyncio.py:30\u001b[0m, in \u001b[0;36m_patch_asyncio.<locals>.run\u001b[0;34m(main, debug)\u001b[0m\n\u001b[1;32m     28\u001b[0m task \u001b[38;5;241m=\u001b[39m asyncio\u001b[38;5;241m.\u001b[39mensure_future(main)\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 30\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mloop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_until_complete\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtask\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     32\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m task\u001b[38;5;241m.\u001b[39mdone():\n",
-      "File \u001b[0;32m~/Documents/GitHub/2025_11_01_tvdi_python_crawel/.venv/lib/python3.10/site-packages/nest_asyncio.py:98\u001b[0m, in \u001b[0;36m_patch_loop.<locals>.run_until_complete\u001b[0;34m(self, future)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m f\u001b[38;5;241m.\u001b[39mdone():\n\u001b[1;32m     96\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m     97\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEvent loop stopped before Future completed.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 98\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/share/uv/python/cpython-3.10.18-macos-aarch64-none/lib/python3.10/asyncio/futures.py:201\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    199\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__log_traceback \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    200\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 201\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception\u001b[38;5;241m.\u001b[39mwith_traceback(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception_tb)\n\u001b[1;32m    202\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_result\n",
-      "File \u001b[0;32m~/.local/share/uv/python/cpython-3.10.18-macos-aarch64-none/lib/python3.10/asyncio/tasks.py:232\u001b[0m, in \u001b[0;36mTask.__step\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    229\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m exc \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    230\u001b[0m         \u001b[38;5;66;03m# We use the `send` method directly, because coroutines\u001b[39;00m\n\u001b[1;32m    231\u001b[0m         \u001b[38;5;66;03m# don't have `__iter__` and `__next__` methods.\u001b[39;00m\n\u001b[0;32m--> 232\u001b[0m         result \u001b[38;5;241m=\u001b[39m \u001b[43mcoro\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    233\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    234\u001b[0m         result \u001b[38;5;241m=\u001b[39m coro\u001b[38;5;241m.\u001b[39mthrow(exc)\n",
-      "Cell \u001b[0;32mIn[6], line 38\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m AsyncWebCrawler() \u001b[38;5;28;01mas\u001b[39;00m crawler:\n\u001b[1;32m     33\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m crawler\u001b[38;5;241m.\u001b[39marun(\n\u001b[1;32m     34\u001b[0m         url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw://\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhtml\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     35\u001b[0m         config \u001b[38;5;241m=\u001b[39m config\n\u001b[1;32m     36\u001b[0m     )\n\u001b[0;32m---> 38\u001b[0m data\u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241m.\u001b[39mloads(result\u001b[38;5;241m.\u001b[39mextracted_data)\n\u001b[1;32m     39\u001b[0m pprint(data)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'json' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'link': 'https://example.com/item1', 'title': 'Item 1'}]\n"
      ]
     }
    ],
@@ -152,7 +143,7 @@
     "            config = config\n",
     "        )\n",
     "    \n",
-    "    data= json.loads(result.extracted_data)\n",
+    "    data= json.loads(result.extracted_content)\n",
     "    pprint(data)\n",
     "        \n",
     "\n",
@@ -160,6 +151,192 @@
     "    asyncio.run(main())\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ca136b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080\">INIT</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">]</span><span style=\"color: #008080; text-decoration-color: #008080\">.... → Crawl4AI </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.7</span><span style=\"color: #008080; text-decoration-color: #008080\">.</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span><span style=\"color: #008080; text-decoration-color: #008080\"> </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;36m[\u001b[0m\u001b[36mINIT\u001b[0m\u001b[1;36m]\u001b[0m\u001b[36m...\u001b[0m\u001b[36m. → Crawl4AI \u001b[0m\u001b[1;36m0.7\u001b[0m\u001b[36m.\u001b[0m\u001b[1;36m7\u001b[0m\u001b[36m \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">FETCH</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">]</span><span style=\"color: #008000; text-decoration-color: #008000\">... ↓ Raw HTML                                                                                             |</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">✓ | ⏱: </span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">0.</span><span style=\"color: #008000; text-decoration-color: #008000\">00s </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;32m[\u001b[0m\u001b[32mFETCH\u001b[0m\u001b[1;32m]\u001b[0m\u001b[32m...\u001b[0m\u001b[32m ↓ Raw HTML                                                                                             |\u001b[0m\n",
+       "\u001b[32m✓\u001b[0m\u001b[32m | ⏱: \u001b[0m\u001b[1;32m0.\u001b[0m\u001b[32m00s \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">SCRAPE</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">]</span><span style=\"color: #008000; text-decoration-color: #008000\">.. ◆ Raw HTML                                                                                             |</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">✓ | ⏱: </span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">0.</span><span style=\"color: #808000; text-decoration-color: #808000\">0</span><span style=\"color: #008000; text-decoration-color: #008000\">0s </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;32m[\u001b[0m\u001b[32mSCRAPE\u001b[0m\u001b[1;32m]\u001b[0m\u001b[32m.. ◆ Raw HTML                                                                                             |\u001b[0m\n",
+       "\u001b[32m✓\u001b[0m\u001b[32m | ⏱: \u001b[0m\u001b[1;33m0.\u001b[0m\u001b[33m0\u001b[0m\u001b[32m0s \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">EXTRACT</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">]</span><span style=\"color: #008000; text-decoration-color: #008000\">. ■ Raw HTML                                                                                             |</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">✓ | ⏱: </span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">25.</span><span style=\"color: #008000; text-decoration-color: #008000\">77s </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;32m[\u001b[0m\u001b[32mEXTRACT\u001b[0m\u001b[1;32m]\u001b[0m\u001b[32m. ■ Raw HTML                                                                                             |\u001b[0m\n",
+       "\u001b[32m✓\u001b[0m\u001b[32m | ⏱: \u001b[0m\u001b[1;32m25.\u001b[0m\u001b[32m77s \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">COMPLETE</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">]</span><span style=\"color: #008000; text-decoration-color: #008000\"> ● Raw HTML                                                                                             |</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">✓ | ⏱: </span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">25.</span><span style=\"color: #008000; text-decoration-color: #008000\">78s </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;32m[\u001b[0m\u001b[32mCOMPLETE\u001b[0m\u001b[1;32m]\u001b[0m\u001b[32m ● Raw HTML                                                                                             |\u001b[0m\n",
+       "\u001b[32m✓\u001b[0m\u001b[32m | ⏱: \u001b[0m\u001b[1;32m25.\u001b[0m\u001b[32m78s \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'content': ['{\"name\": \"電競筆電 - 高效能遊戲機\", \"description\": \"這款筆電配備最新的 RTX 4070 '\n",
+      "              '顯示卡， 搭配 Intel i9 處理器，適合專業遊戲玩家。\", \"original_price\": \"$1499.99\", '\n",
+      "              '\"current_price\": \"$1299.99\", \"url\": '\n",
+      "              '\"https://example.com/gaming-laptop\"}'],\n",
+      "  'error': False,\n",
+      "  'index': 0,\n",
+      "  'tags': ['product']},\n",
+      " {'content': ['{\"name\": \"無線滑鼠 - 人體工學設計\", \"description\": \"符合人體工學的無線滑鼠，電池續航力長達 3 '\n",
+      "              '個月。\", \"original_price\": null, \"current_price\": \"$29.99\", \"url\": '\n",
+      "              '\"https://example.com/wireless-mouse\"}'],\n",
+      "  'error': False,\n",
+      "  'index': 1,\n",
+      "  'tags': ['product']}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "import nest_asyncio,json\n",
+    "from crawl4ai.extraction_strategy import LLMExtractionStrategy\n",
+    "from crawl4ai import AsyncWebCrawler, CrawlerRunConfig, CacheMode\n",
+    "\n",
+    "async def main():\n",
+    "   # 測試用 HTML（模擬電商網頁）\n",
+    "    html = \"\"\"\n",
+    "    <html>\n",
+    "        <body>\n",
+    "            <div class='product-card'>\n",
+    "                <h2>電競筆電 - 高效能遊戲機</h2>\n",
+    "                <p>這款筆電配備最新的 RTX 4070 顯示卡，\n",
+    "                   搭配 Intel i9 處理器，適合專業遊戲玩家。</p>\n",
+    "                <div class='price-section'>\n",
+    "                    <span class='old-price'>原價 $1499.99</span>\n",
+    "                    <span class='new-price'>特價 $1299.99</span>\n",
+    "                </div>\n",
+    "                <a href='https://example.com/gaming-laptop'>查看詳情</a>\n",
+    "            </div>\n",
+    "            <div class='product-card'>\n",
+    "                <h2>無線滑鼠 - 人體工學設計</h2>\n",
+    "                <p>符合人體工學的無線滑鼠，電池續航力長達 3 個月。</p>\n",
+    "                <div class='price-section'>\n",
+    "                    <span class='new-price'>$29.99</span>\n",
+    "                </div>\n",
+    "                <a href='https://example.com/wireless-mouse'>查看詳情</a>\n",
+    "            </div>\n",
+    "        </body>\n",
+    "    </html>\n",
+    "    \"\"\"\n",
+    "\n",
+    "    custom_instruction = \"\"\"\n",
+    "    請從網頁中擷取所有產品資訊，並以 JSON 格式返回。\n",
+    "\n",
+    "    要求：\n",
+    "    1. 提取每個產品的以下資訊：\n",
+    "       - 產品名稱（從標題中提取）\n",
+    "       - 產品描述（簡短描述）\n",
+    "       - 原價（如果有的話，沒有則為 null）\n",
+    "       - 特價（當前售價）\n",
+    "       - 連結\n",
+    "\n",
+    "    2. 返回的格式:\n",
+    "    {\n",
+    "        \"products\": [\n",
+    "            {\n",
+    "                \"name\": \"產品名稱\",\n",
+    "                \"description\": \"產品描述\",\n",
+    "                \"original_price\": \"原價或 null\",\n",
+    "                \"current_price\": \"當前售價\",\n",
+    "                \"url\": \"產品連結\"\n",
+    "            }\n",
+    "        ],\n",
+    "        \"total_count\": 產品數量\n",
+    "    }\n",
+    "\n",
+    "    3. 價格請保留貨幣符號和金額\n",
+    "    4. 如果沒有原價，original_price 設為 null\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # 建立LLM提取策略\n",
+    "    strategy = LLMExtractionStrategy(\n",
+    "        llm_config=LLMConfig(\n",
+    "            provider=\"gemini/gemini-2.5-flash\",\n",
+    "            api_token=\"xxxxxxxxx\"\n",
+    "            ),\n",
+    "        api_token=None,\n",
+    "        instruction=custom_instruction\n",
+    "    )\n",
+    "\n",
+    "    config = CrawlerRunConfig(\n",
+    "        cache_mode=CacheMode.BYPASS,\n",
+    "        extraction_strategy=strategy,\n",
+    "    )\n",
+    "\n",
+    "    async with AsyncWebCrawler() as crawler:\n",
+    "        result = await crawler.arun(url=f\"raw://{html}\",config=config)\n",
+    "        #print(result.extracted_content)\n",
+    "        data = json.loads(result.extracted_content)\n",
+    "        pprint(data)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    asyncio.run(main())"
    ]
   }
  ],
